add new changes at /nginx

--- a/nginx/conf.d/Python_Web.conf
+++ b/nginx/conf.d/Python_Web.conf
@@ -1,3 +1,4 @@
+
 upstream robo_project {
     server Python_Web:8000;
 }
@@ -19,8 +20,6 @@ server {
     }
 
     location /static/ {
-            alias /home/app/web/staticfiles/;
+            alias /home/app/staticfiles/;
     }
 }
-
-
